--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ rmcp = { version = "0.9", features = ["server", "transport-io"] }
 schemars = "1"
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
+
+[dev-dependencies]
+tempfile = "3"
